@@ -10,13 +10,10 @@
 
 #define TEST_PORT 987
 
-int main(int argc, char *argv[])
+int perform_bind( )
 {
     int fd;
     struct sockaddr_in addr;
-
-    printf("running as user: %d (%s).\n", getuid(), getpwuid(getuid())->pw_name);
-    printf("running as group: %d (%s).\n", getgid(), getgrgid(getgid())->gr_name);
 
     fd = socket(PF_INET, SOCK_STREAM, 0);
     if (fd < 0) {
@@ -30,17 +27,33 @@ int main(int argc, char *argv[])
     addr.sin_port = htons(TEST_PORT);
     addr.sin_addr.s_addr = htonl(INADDR_ANY);
 
-    if (bind(fd, (struct sockaddr *)&addr, sizeof(addr)) == -1) {
+    int res=bind(fd, (struct sockaddr *)&addr, sizeof(addr));
+
+    close(fd);
+
+    if(res==-1) {
         perror("test: bind");
-        exit(1);
+        return 0;
     }
 
-    printf("bind of port %d succeeded.\n", TEST_PORT);
+    return 1;
+}
+
+int main(int argc, char *argv[])
+{
+    printf("running as user: %d (%s).\n", getuid(), getpwuid(getuid())->pw_name);
+    printf("running as group: %d (%s).\n", getgid(), getgrgid(getgid())->gr_name);
+
+    if( perform_bind() )
+        printf("bind of port %d succeeded.\n", TEST_PORT);
+    printf("Retrying the bind\n");
+    if( perform_bind() )
+        printf("bind of port %d succeeded again.\n", TEST_PORT);
 
     /* Sleep to check if the parent sticks around after the bind (if -n 1
        is used, it shouldn't */
     printf("Sleeping for 10 seconds...\n");
     sleep(10);
 
-    exit(0);
+    return 0;
 }
