@@ -1,5 +1,7 @@
 Shachar Shemesh (June 2, 2007)
   * Move the preload library to the PKGLIBDIR.
+  * Switch the functions of the fork. Parent is the "child" command, child is
+    the root helper.
 
 Release 0.1 (May 21, 2007)
 
